HTML form tasks v2

--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,7 @@
-html {
-  font-style: normal;
-}
-
-.form-block {
+.formBlock {
   margin-bottom: 20px;
 }
 
-.block-input:not(:last-of-type) {
+.blockInput:not(:last-of-type) {
   padding-bottom: 10px;
 }
